# fusion-bend-sheet

./: .gitignore  CLAUDE.md  Makefile  PRIVACY.md  README.md  ROBUSTNESS_REVIEW.md  TubeBendSheet.manifest  __init__.py  config.py  pyproject.toml  pyrightconfig.json
.claude/agents/: python-code-robustness-reviewer.md
commands/: __init__.py
commands/createBendSheet/: __init__.py  bend_sheet_display.py  bend_sheet_generator.py  dialog_builder.py  entry.py  input_parser.py  selection_validator.py
commands/manageBenders/: __init__.py  bender_editor.py  entry.py  html_bridge.py  input_dialogs.py  input_handler.py
commands/manageBenders/resources/: bender_tree.html
core/: __init__.py  calculations.py  formatting.py  geometry.py  geometry_extraction.py  html_generator.py  path_analysis.py  path_ordering.py
lib/fusionAddInUtils/: __init__.py  event_utils.py  general_utils.py
models/: __init__.py  bend_data.py  bender.py  types.py  units.py
resources/: benders.json
storage/: __init__.py  attributes.py  profiles.py
tests/: __init__.py  conftest.py  test_calculations.py  test_formatting.py  test_geometry.py  test_geometry_extraction.py  test_html_generator.py  test_path_ordering.py  test_profiles.py
typings/adsk/: __init__.pyi  core.pyi  fusion.pyi
